fix issue with semantic-release loading

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GH_ACTIONS_TOKEN }} # Admin PAT to bypass push protection on 'main' branch
+          persist-credentials: false
 
       - name: Download artifacts
         uses: actions/download-artifact@v4
@@ -27,9 +27,11 @@ jobs:
       # generate new version, commit and push commit + tags
       - name: Release
         id: release
-        uses: agilecustoms/release@v1
+        uses: agilecustoms/publish@main
         with:
-          version-prefix: "v"
+          version-prefix: v
+        env:
+          GH_TOKEN: ${{ secrets.GH_PUBLIC_RELEASES_TOKEN }}
 
       - name: Summary
-        run: echo "### Released ${{ steps.release.outputs.version }} $([ \"${{ steps.release.outputs.changes_detected }}\" == 'true' ] && echo ':pushpin:' || echo '(no changes)')" >> $GITHUB_STEP_SUMMARY
+        run: echo "### Released ${{ steps.release.outputs.version }} $([ '${{ steps.release.outputs.changes_detected }}' = 'true' ] && echo ':pushpin:' || echo '(no changes)')" >> $GITHUB_STEP_SUMMARY
