load semantic-release dynamically

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -8,8 +8,6 @@ on:
 jobs:
   Build:
     uses: ./.github/workflows/build.yml
-    with:
-      artifacts: true
 
   Release:
     needs: Build
@@ -34,4 +32,4 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_PUBLIC_RELEASES_TOKEN }}
 
       - name: Summary
-        run: echo "### Released ${{ steps.release.outputs.version }} $([ '${{ steps.release.outputs.changes_detected }}' = 'true' ] && echo ':pushpin:' || echo '(no changes)')" >> $GITHUB_STEP_SUMMARY
+        run: echo "### Released ${{ steps.release.outputs.version }}" >> $GITHUB_STEP_SUMMARY
