--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "release-gen",
-  "description": "Generate release version and notes",
+  "name": "relese-gen",
   "version": "1.0.0",
-  "type": "module",
+  "description": "GitHub Action for Semantic Release",
+  "main": "index.js",
   "scripts": {
-    "lint": "eslint src/*.ts",
-    "lint:fix": "npm run lint -- --fix",
-    "build-old": "ncc build src/index.ts --minify; rm dist/package.json",
-    "build": "ncc build src/index.ts --external semantic-release; rm dist/package.json",
-    "run": "node index.js",
-    "test-it": "node dist/index.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test-it": "node index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/agilecustoms/release-gen.git"
+  },
+  "keywords": [
+    "semantic-release",
+    "action"
+  ],
+  "author": "Alexey Chekulaev <chekulaevalexey@gmail.com> (https://github.com/laxa1986)",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/agilecustoms/release-gen/issues"
+  },
+  "homepage": "https://github.com/agilecustoms/release-gen#readme",
   "dependencies": {
-    "@actions/core": "^1.2.6",
-    "@semantic-release/commit-analyzer": "^13.0.1",
-    "@semantic-release/release-notes-generator": "^14.0.3",
-    "semantic-release": "^24.0.0"
-  },
-  "devDependencies": {
-    "@stylistic/eslint-plugin": "^5.0.0",
-    "@types/node": "^20.0.0",
-    "@vercel/ncc": "^0.38.3",
-    "eslint": "^9.9.0",
-    "eslint-plugin-import": "^2.31.0",
-    "typescript": "^5.4.5",
-    "typescript-eslint": "^8.2.0"
+    "@actions/core": "^1.10.1",
+    "@semantic-release/changelog": "^6.0.3",
+    "semantic-release": "^24.2.5"
   }
 }
