--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches-ignore:
       - main
-  workflow_call: # can be called from 'build-and-release' workflow
+  workflow_call:
 
 jobs:
   Build:
