--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "relese-gen",
   "version": "1.0.0",
   "description": "GitHub Action for Semantic Release",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "test-it": "node index.js"
+    "test-it": "node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -25,5 +25,17 @@
     "@actions/core": "^1.10.1",
     "@semantic-release/changelog": "^6.0.3",
     "semantic-release": "^24.2.5"
+  },
+  "devDependencies": {
+    "@stylistic/eslint-plugin": "^5.0.0",
+    "@testcontainers/localstack": "^11.0.0",
+    "@types/node": "^20.0.0",
+    "@vercel/ncc": "^0.38.3",
+    "@vitest/coverage-v8": "^3.0.2",
+    "eslint": "^9.9.0",
+    "eslint-plugin-import": "^2.31.0",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^8.2.0",
+    "vitest": "^3.0.2"
   }
 }
