--- a/action.yml
+++ b/action.yml
@@ -3,7 +3,7 @@ description: 'Generate next release version and notes'
 author: Alexey Chekulaev
 runs:
   using: 'node20'
-  main: 'index.js'
+  main: 'src/index.js'
 
 # Node 20 is max as of June 2025
 # https://docs.github.com/en/actions/sharing-automations/creating-actions/creating-a-javascript-action
