fix: switch to TS

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,10 @@ on:
     branches-ignore:
       - main
   workflow_call:
+    inputs:
+      artifacts:
+        type: boolean
+        default: false
 
 jobs:
   Build:
@@ -13,18 +17,24 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Cache
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+
       - name: Install dependencies
         run: npm ci
 
-#      - name: Lint
-#        run: npm run lint
+      - name: Lint
+        run: npm run lint
 
-#      - name: Build
-#        run: npm run build
+      - name: Build
+        run: npm run build
 
-#      - name: Upload artifacts
-#        if: inputs.artifacts
-#        uses: actions/upload-artifact@v4
-#        with:
-#          path: dist # take everything from dist/ folder
-#          name: dist #  and create artifact named dist (so later on the download action will create <repo-root>/dist/ folder)
+      - name: Upload artifacts
+        if: inputs.artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          path: dist # take everything from dist/ folder
+          name: dist #  and create artifact named dist (so later on the download action will create <repo-root>/dist/ folder)
