--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint:fix": "npm run lint -- --fix",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "run-ci": "node dist/index.js",
+    "run-ci": "tsc && node dist/index.js",
     "run-local": "tsc && node dist/local.js"
   },
   "repository": {
