--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "url": "git+https://github.com/agilecustoms/release-gen.git"
   },
   "keywords": [
-    "semantic-release",
+    "release",
     "action"
   ],
   "author": "Alexey Chekulaev <chekulaevalexey@gmail.com> (https://github.com/laxa1986)",
@@ -23,7 +23,7 @@
   "bugs": {
     "url": "https://github.com/agilecustoms/release-gen/issues"
   },
-  "homepage": "https://github.com/agilecustoms/release-gen#readme",
+  "homepage": "https://github.com/agilecustoms/release-gen",
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@semantic-release/changelog": "^6.0.3",
