--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,14 +6,14 @@
   // 'tsc' used directly (not 'ncc' like in other Node.js GH actions)
   "compilerOptions": {
     "target": "ES2022",             // highest fully supported by Node 20
-    "moduleResolution": "nodenext", // ignored by ncc. can use 'nodenext', but bundler allows to omit .js in imports
-    "module": "nodenext",           // ignored by ncc. only appropriate modern value for "bundler" mode
-    "outDir": "dist",               // ignored by ncc, no matter for IDE. typical value for bundler mode
+    "moduleResolution": "nodenext",
+    "module": "nodenext",
+    "outDir": "dist",
 
     // DEFAULTS that are always "good to have" - expect to be the same for all projects
     "allowJs": false,             // no need to compile JS, all is TS
     "noUncheckedIndexedAccess": true,
-    "removeComments": true,       // ignored by ncc, no matter for IDE
+    "removeComments": true,
     "skipLibCheck": true,         // skip type checking of declaration files (.d.ts) - allows quick hot reload
     "strict": true,               // enable all strict type-checking options
     "verbatimModuleSyntax": true, // force using 'import type' for types
