try to pass tag format through workflow env variable

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,8 @@ jobs:
 
       - name: Test
         run: npm run test
+        env:
+          INPUT_TAG-FORMAT: 'v${version}'
 
       - name: Build
         run: npm run build
