--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,8 @@ jobs:
       - name: Test
         run: npm run test
         env:
-          GITHUB_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ secrets.TMP_TOKEN }}
+#          GITHUB_TOKEN: ${{ github.token }}
 
       - name: Build
         run: npm run build
