--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Test
         run: npm run test
         env:
-          MY_TOKEN: ${{ secrets.TMP_TOKEN }}
+          MY_TOKEN: ${{ secrets.GH_PUBLIC_RELEASES_TOKEN }}
 #          GITHUB_TOKEN: ${{ github.token }}
 
       - name: Build
