pass secrets in child workflow

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -10,6 +10,9 @@ jobs:
     uses: ./.github/workflows/build.yml
     with:
       artifacts: true
+    secrets: inherit
+    permissions:
+      contents: write
 
   Release:
     needs: Build
