fix: start code cleanup

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,15 +28,15 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-#      - name: Lint
-#        run: npm run lint
+      - name: Lint
+        run: npm run lint
 
       - name: Test
         run: npm run test
         env:
-          MY_TOKEN: ${{ secrets.TMP_TOKEN }}
+          GITHUB_TOKEN: ${{ github.token }}
+#          MY_TOKEN: ${{ secrets.TMP_TOKEN }}
 #          MY_TOKEN: ${{ secrets.GH_PUBLIC_RELEASES_TOKEN }}
-#          MY_TOKEN: ${{ github.token }}
 
       - name: Build
         run: npm run build
