Revert "remove extra permissions"
This reverts commit 184f42a92c0e025b2f75b1a58c2a1657db362970.

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -11,6 +11,8 @@ jobs:
     with:
       artifacts: true
     secrets: inherit
+    permissions:
+      contents: write
 
   Release:
     needs: Build
