--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -10,6 +10,8 @@ jobs:
     uses: ./.github/workflows/build.yml
     with:
       artifacts: true
+    permissions:
+      contents: read
 
   Release:
     needs: Build
