fix: restore write permissions

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -11,7 +11,7 @@ jobs:
     with:
       artifacts: true
     permissions:
-      contents: read
+      contents: write
 
   Release:
     needs: Build
