--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/agilecustoms/release-gen",
   "dependencies": {
     "@actions/core": "^1.10.1",
+    "esmock": "^2.7.1",
     "semantic-release": "^24.2.5"
   },
   "devDependencies": {
