--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "esmock": "^2.7.1",
-    "semantic-release": "^24.2.5"
+    "semantic-release": "^24.2.5",
+    "conventional-changelog-conventionalcommits": "9.1.0"
   },
   "devDependencies": {
     "@stylistic/eslint-plugin": "^5.0.0",
