finalize conventionalcommits-major

--- a/action.yml
+++ b/action.yml
@@ -9,7 +9,7 @@ inputs:
   changelog-title:
     description: 'Title of the changelog file (first line of the file)'
     required: false
-  npm-extra-deps:
+  npm_extra_deps: # if use hyphens, then can't mock in integration tests
     description: 'Additional npm dependencies, used to install non-default commit parsers such as conventional-changelog-conventionalcommits@9.1.0'
     default: ''
     required: false
