--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "lint": "eslint src/**/*.ts test/**/*.ts",
+    "lint": "eslint src/*.ts src/**/*.ts test/**/*.ts",
     "lint:fix": "npm run lint -- --fix",
     "test": "vitest run --coverage",
     "build": "tsc",
-    "run-local": "tsc && node dist/local.js"
+    "run-local": "tsc && node dist/local.js",
+    "prepare": "husky"
   },
   "repository": {
     "type": "git",
@@ -36,6 +37,7 @@
     "@vitest/coverage-v8": "^3.0.2",
     "eslint": "^9.9.0",
     "eslint-plugin-import": "^2.31.0",
+    "husky": "^9.1.7",
     "typescript": "^5.4.5",
     "typescript-eslint": "^8.2.0",
     "vitest": "^3.0.2"
