--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -25,12 +25,10 @@ jobs:
         uses: actions/download-artifact@v4
         # after this we have changes in file dist/index.js
 
-      # generate new version, commit and push commit + tags
       - name: Release
         id: release
-        uses: agilecustoms/publish@main
+        uses: agilecustoms/publish@summary
+        with:
+          summary: ''
         env:
           GH_TOKEN: ${{ secrets.GH_PUBLIC_RELEASES_TOKEN }}
-
-      - name: Summary
-        run: echo "### Released ${{ steps.release.outputs.version }}" >> $GITHUB_STEP_SUMMARY
