--- a/package.json
+++ b/package.json
@@ -1,8 +1,24 @@
 {
-  "name": "relese-gen",
-  "description": "GitHub Action for Semantic Release",
+  "name": "release-gen",
   "version": "1.0.0",
+  "description": "GitHub Action wrapper for Semantic Release",
+  "keywords": ["publish", "release", "github-action", "semantic-release"],
+  "homepage": "https://github.com/agilecustoms/release-gen",
+  "bugs": {
+    "url": "https://github.com/agilecustoms/release-gen/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/agilecustoms/release-gen.git"
+  },
+  "license": "MIT",
+  "author": "Alexey Chekulaev <chekulaevalexey@gmail.com> (https://github.com/laxa1986)",
   "type": "module",
+  "main": "dist/index.js",
+  "engines": {
+    "node": ">=20.0.0"
+  },
+  "private": true,
   "scripts": {
     "prepare": "if [ \"$CI\" != \"true\" ]; then husky; fi",
     "lint": "eslint *.{ts,mjs} \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -11,21 +27,6 @@
     "build": "tsc",
     "run-local": "tsc && node dist/local.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/agilecustoms/release-gen.git"
-  },
-  "keywords": [
-    "publish",
-    "release",
-    "action"
-  ],
-  "author": "Alexey Chekulaev <chekulaevalexey@gmail.com> (https://github.com/laxa1986)",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/agilecustoms/release-gen/issues"
-  },
-  "homepage": "https://github.com/agilecustoms/release-gen",
   "dependencies": {
     "@actions/core": "^1.10.1",
     "esmock": "^2.7.1",
