--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "release-gen",
   "version": "1.0.0",
   "description": "GitHub Action wrapper for Semantic Release",
-  "keywords": ["publish", "release", "github-action", "semantic-release"],
+  "keywords": ["github-action", "publish", "release", "semantic-release"],
   "homepage": "https://github.com/agilecustoms/release-gen",
   "bugs": {
     "url": "https://github.com/agilecustoms/release-gen/issues"
