--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -26,6 +26,6 @@ jobs:
         # after this we have changes in file dist/index.js
 
       - name: Release
-        uses: agilecustoms/publish@next
+        uses: agilecustoms/release@next
         env:
           GH_TOKEN: ${{ secrets.GH_PUBLIC_RELEASES_TOKEN }}
