fix: change prerelease suffix

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -3,7 +3,7 @@
     "main",
     {
       "name": "next",
-      "prerelease": "alpha",
+      "prerelease": "beta",
       "channel": "demo"
     }
   ]
