--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,13 +20,14 @@ jobs:
     environment: release
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
           persist-credentials: false
 
       - name: Download artifacts
-        uses: actions/download-artifact@v4
-        # after this we have changes in file dist/index.js
+        uses: actions/download-artifact@v5
+        with:
+          path: dist
 
       - name: Release
         uses: agilecustoms/release@next
