--- a/.releaserc.json
+++ b/.releaserc.json
@@ -7,7 +7,8 @@
         "releaseRules": [
           { "type": "perf", "release": false },
           { "type": "docs", "release": "patch" },
-          { "type": "misc", "release": "patch" }
+          { "type": "misc", "release": "patch" },
+          { "type": "build", "release": "patch" }
         ]
       }
     ],
@@ -32,6 +33,10 @@
             {
               "type": "misc",
               "section": "Miscellaneous"
+            },
+            {
+              "type": "build",
+              "section": "Dependencies update"
             }
           ]
         }
