--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@actions/core": "^3.0.0",
+    "conventional-changelog-conventionalcommits": "^9.1.0",
     "esmock": "^2.7.1",
     "semantic-release": "^25.0.2"
   },
